kubernetes/prestop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # prestop 작업시간보다 커야 합니다.
      terminationGracePeriodSeconds: 60
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            memory: "64Mi"
            cpu: "0.1"
        ports:
        - containerPort: 80
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 30"]
